# market_data_broker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: default.yaml
docs/: architecture.md  context.md  failure_modes.md  technical_assessment.md  topics.md  worked_examples.md
progress/: 20260425_implementation_plan.txt  20260425_spike_coinbase_findings.md
scripts/: claude_desktop_setup.sh  demo_multi_client.sh  mcp_inspector.sh  smoke_ws_client.py  spike_coinbase.py  start.sh
slides/: slides_templates.html  walkthrough.html
src/market_data_broker/: __main__.py  bus.py  config.py  logging_config.py  models.py  registry.py  snapshot.py  topics.py
src/market_data_broker/ingest/: __init__.py  coinbase.py
src/market_data_broker/server/: __init__.py  mcp_server.py  status.py  ws.py
tests/: test_bus.py  test_config.py  test_ingest_coinbase.py  test_mcp_server.py  test_models.py  test_registry.py  test_smoke.py  test_snapshot.py  test_status_server.py  test_topics.py  test_ws_server.py
