[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-broker"
version = "0.1.0"
description = "Real-time crypto market data hub with MCP interface"
requires-python = ">=3.11"
dependencies = [
  "websockets>=12.0",
  "pydantic>=2.6",
  "mcp>=1.0",
  "structlog>=24.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[project.scripts]
market-data-broker = "market_data_broker.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
